CR-2002-07-09-0: Enhancem.: merges from V53_beta2_BRANCH
                            (CR-2002-07-09-0, CR-2002-07-08-0)

JG-2002-07-05-1: Enhancem.: new bitfield implementation in utilib.

JG-2002-07-05-0: Testsuite: system_tests/qmaster/error_states: has to wait
                            for job to leave qmaster before deleting pe due 
                            to new reference checking (EB-2002-06-27-1).

JG-2002-07-04-1: Cleanup:   Changed the macros for cull object definition to 
                            provide easier and more flexible object type 
                            definitions.
                 Issue:     #305           

EB-2002-07-04-0: Doc:       renamed "job array" to "array job" in 
                            the manual pages                          

JG-2002-07-04-0: Bugfix:    non immediate interactive jobs (-now no) failed,
                            for immediate qsub jobs (-now yes) the job script
                            was not checked.

AA-2002-07-04-0: Bugfix:    Job dependency display in qmon
                 Issue:     #275 affects only qmon
                 Bugtraq:   #4706929

JG-2002-07-03-0: Bugfix:    Deleting ckpt objects and pe objects could
                            make qmaster dump core.

AH-2002-07-02-3: Bugfix:    Fix problem with flittering load adjustment
                 Issue:     #309
                 Bugtraq:   #4710514
                 Changed:   sge_schedd

AH-2002-07-02-1: Bugfix:    Added missing newline character to error msg.

EB-2002-07-02-0: Cleanup:   see EB-2002-06-30-0

SD-2002-07-01-0: Enhancem:  Updated MPICH/Myrinet integration

EB-2002-07-01-0: Cleanup:   see EB-2002-06-30-0

CR-2002-07-01-0: Bugfix:    Fixed wrong message format defines for L18N/I10N

EB-2002-07-01-0: Bugfix:    Fix of EB-2002-06-17-0

EB-2002-06-30-0: Cleanup:   in gdi library
                            - removed code which was duplicated in the past
                            - moved functions in differnet modules